--- a/AutoCmdb/templates/asset/index.html
+++ b/AutoCmdb/templates/asset/index.html
@@ -1,6 +1,11 @@
 {% extends 'asset/base.html' %}
 {% load asset_tags %}
 
+<!-- 驗證用戶部門  -->
+{% verify_permissions request as admin_dent %}
+
+
+
 {% block title %}資產管理{% endblock %}
 
 {% block head %}
@@ -33,11 +38,13 @@
 
         <div class="row">
 
+
             <div class="col-md-4">
 
 
-                <a href="{% url 'asset_add' %}" class="btn btn-primary" role="button">新增資產</a>
-
+                {% if admin_dent %}
+                    <a href="{% url 'asset_add' %}" class="btn btn-primary" role="button">新增資產</a>
+                {% endif %}
 
             </div>
 
@@ -48,7 +55,8 @@
 
                     <div class="form-group">
                         <label for="inputsearch" class="col-form-label">搜尋</label>
-                        <input type="text" class="form-control" name='name' id="search" placeholder="" value="{{ name }}">
+                        <input type="text" class="form-control" name='name' id="search" placeholder=""
+                               value="{{ name }}">
                     </div>
 
 
@@ -64,15 +72,20 @@
                     </div>
 
 
-                    <div class="form-group">
-                        <label class="col-form-label">部門</label>
-                        <select class="selectpicker" name="dent_id" data-width="fit">
-                            <option value="">-------</option>
-                            {% for department in department_obj %}
-                                <option value="{{ department.id }}">{{ department.name }}部({{ department.code }})</option>
-                            {% endfor %}
-                        </select>
-                    </div>
+                    {% if admin_dent %}
+                        <a href="{% url 'asset_add' %}" class="btn btn-primary" role="button">新增資產</a>
+
+                        <div class="form-group">
+                            <label class="col-form-label">部門</label>
+                            <select class="selectpicker" name="dent_id" data-width="fit">
+                                <option value="">-------</option>
+                                {% for department in department_obj %}
+                                    <option value="{{ department.id }}">{{ department.name }}部({{ department.code }})</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    {% endif %}
+
 
                     <div class="form-group">
                         <button type="submit" class="btn btn-success" style="margin-left: 20px">Submit</button>
@@ -92,8 +105,10 @@
                 <th>類型</th>
                 <th>部門</th>
                 <th>負責人</th>
-                <th>購買日期</th>
-                <th>價格</th>
+                {% if admin_dent %}
+                    <th>購買日期</th>
+                    <th>價格</th>
+                {% endif %}
                 <th>狀態</th>
                 <th>操作</th>
 
@@ -105,13 +120,12 @@
 
                 <tr>
                     <td>
-                    {{ forloop.counter  }}
+                        {{ forloop.counter }}
                     </td>
 
                     <td name="id" style="display: none">
                         <input type="text" class="form-control" value="{{ asset.id }}"/>
                     </td>
-
 
 
                     <td name="name">
@@ -166,7 +180,7 @@
 
                     <td name="manager">
                         <span class="form-control-static">
-                            {{ asset.manager }}
+                            {{ asset.manager|default:"" }}
                         </span>
 
                         <select id='user_put' class="form-control" style="display: none">
@@ -176,21 +190,24 @@
 
 
                     </td>
-                    <td name="purchase_date" id="datebox">
 
-                        <span class="form-control-static">{{ asset.purchase_date|date:"Y-m-d" }}</span>
-                        <input type="text" class="form-control match-content" style="display:none;">
+                    {% if admin_dent %}
+                        <td name="purchase_date" id="datebox">
+
+                            <span class="form-control-static">{{ asset.purchase_date|date:"Y-m-d" }}</span>
+                            <input type="text" class="form-control match-content" style="display:none;">
 
 
-                    </td>
-                    <td name="price">
+                        </td>
+                        <td name="price">
                         <span class="form-control-static">
                             {{ asset.price }}
                         </span>
 
-                        <input type='number' class='form-control match-content' value="" style="display: none">
-                    </td>
+                            <input type='number' class='form-control match-content' value="" style="display: none">
+                        </td>
 
+                    {% endif %}
 
                     <td name="status">
 
