--- a/AutoCmdb/templates/base.html
+++ b/AutoCmdb/templates/base.html
@@ -8,12 +8,13 @@
     <meta name="author" content="">
 
 
-    <title>{% block title %}CMDB{% endblock %}</title>
+    <title >{% block title %}CMDB{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/dashboard.css" rel="stylesheet">
-    <link href="/static/css/all.css" rel="stylesheet">
+{#    <link href="/static/css/all.css" rel="stylesheet">#}
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
 
 
     <!-- Bootstrap core JavaScript
@@ -48,7 +49,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">CMDB</a>
+            <a class="navbar-brand" href="#"><span style="color: white">CMDB</span></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -73,7 +74,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar bg-info">
+        <div class="col-sm-2 col-md-2 col-lg-2 sidebar bg-info">
             {% block sideber_menu %}
 
                 <ul class="nav nav-sidebar">
@@ -89,7 +90,7 @@
         </div>
 
 
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-sm-10 col-sm-offset-2 col-md-10 col-lg-10 col-md-offset-2 main">
 
             {% block content %}
                 <h1 class="page-header">Dashboard</h1>
