--- a/AutoCmdb/templates/asset/asset_add.html
+++ b/AutoCmdb/templates/asset/asset_add.html
@@ -26,7 +26,7 @@
             border-radius: 4px;
         }
 
-    .modal-dialog {
+        .modal-dialog {
 
             width: 600px;
             left: 50%;
@@ -35,8 +35,6 @@
             margin-left: -250px;
 
         }
-
-
 
     </style>
 
@@ -76,7 +74,6 @@
             <div class="row" style="padding-left: 15px">
 
                 <input name="name" value="" style="display: none">
-
 
 
                 <div class="col-md-6 form-group has-feedback">
@@ -145,6 +142,7 @@
                 </div>
             </div>
 
+            {% csrf_token %}
         </form>
 
     </div>
@@ -209,8 +207,6 @@
         }
 
 
-
-
         // 選擇類型後請求該分類數量
         function get_category(e) {
             //console.log(e);
@@ -233,7 +229,6 @@
             });
 
         };
-
 
 
         // bind button
