--- a/AutoCmdb/templates/asset_repair/add.html
+++ b/AutoCmdb/templates/asset_repair/add.html
@@ -6,10 +6,17 @@
 
 
 
+
+
 {% block title %}新增維修記錄表{% endblock %}
 
 {% block head %}
 
+
+    <link rel="stylesheet" href="/static/css/bootstrap-fileinput.css">
+
+    <script src="/static/js/bootstrap-fileinput.js"></script>
+    <script src="/static/js/bootstrap-fileinput_zh-TW.js"></script>
 
 
 
@@ -27,32 +34,60 @@
 
     <div class="" style="padding: 20px">
         <form role="form" method="post" id="form">
+
+            {% csrf_token %}
             <div class="row">
-{#                <div class="col-lg-12">#}
-                    <div class="col-lg-6 form-group has-feedback">
-                        {{ forms_obj.category.label_tag }}
-                        {{ forms_obj.category }}
-                    </div>
 
-                    <div class="col-lg-6 form-group has-feedback">
-                        {{ forms_obj.asset_obj.label_tag }}
-                        {{ forms_obj.asset_obj }}
-                    </div>
-
-                    <div class="col-lg-12 form-group has-feedback">
-                        {{ forms_obj.title.label_tag }}
-                        {{ forms_obj.title }}
-                    </div>
-
-                    <div class="col-lg-12 form-group has-feedback">
-                        {{ forms_obj.summary.label_tag }}
-                        {{ forms_obj.summary }}
-                    </div>
-
+                <div class="col-lg-6 form-group has-feedback">
+                    {{ forms_obj.category.label_tag }}
+                    {{ forms_obj.category }}
                 </div>
 
+                <div class="col-lg-6 form-group has-feedback">
+                    {{ forms_obj.asset_obj.label_tag }}
+                    {{ forms_obj.asset_obj }}
+                </div>
 
-{#            </div>#}
+                <div class="col-lg-12 form-group has-feedback">
+                    {{ forms_obj.title.label_tag }}
+                    {{ forms_obj.title }}
+                </div>
+
+                <div class="col-lg-12 form-group has-feedback">
+                    {{ forms_obj.summary.label_tag }}
+                    {{ forms_obj.summary }}
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <label for="id_summary">上傳圖片:</label>
+
+                    <input id="input-id" type="file" name="photo" class="file" multiple=true
+                           data-preview-file-type="any">
+
+                </div>
+            </div>
+
+
+            <div class="row" style="padding: 15px">
+
+                <div class="col-lg-12 form-group">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleFormControlFile1">Example file input</label>
+                            <input type="file" name="sfile" class="form-control-file" id="exampleFormControlFile1">
+                        </div>
+                    </form>
+
+                    <button id="submit" type="submit" class="btn btn-success center-block">提交表單</button>
+                </div>
+
+            </div>
+
+
         </form>
     </div>
 
@@ -66,6 +101,22 @@
 
     <script>
 
+
+        var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+
+        function csrfSafeMethod(method) {
+            // these HTTP methods do not require CSRF protection
+            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+
+        $.ajaxSetup({
+            beforeSend: function (xhr, settings) {
+                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+            }
+        });
+
         var data = {{ data|safe }};
 
         function foo(e) {
@@ -78,10 +129,49 @@
                     text: item.name,
                 }));
 
-            })
+            });
+
+            $("#id_asset_obj").removeAttr('disabled');
 
 
         }
+
+
+        $("#input-id").fileinput({
+
+            uploadUrl: "{% url 'asset_file' %}", //设置上传的地址
+            language: "zh-TW",
+            previewFileType: 'any',
+            allowedFileExtensions: ['jpg', 'gif', 'png'],
+            maxFileCount: 10,
+            showUpload: true,
+            uploadExtraData: {
+                "csrfmiddlewaretoken": csrftoken //帶上CSRF参数
+            },
+
+
+        });
+
+
+        $(document).ready(function () {
+
+            // bind button
+            $("#submit").on("click", function (e) {
+                $("#form").submit();
+            });
+
+
+            // 提交 新增資產表單
+            $("#form").on("submit", function (e) {
+
+                console.log('form');
+                var postData = $(this).serializeArray();
+                console.log(postData);
+            });
+
+
+        });
+
 
     </script>
 
