--- a/AutoCmdb/templates/asset_repair/add.html
+++ b/AutoCmdb/templates/asset_repair/add.html
@@ -150,6 +150,9 @@
             },
 
 
+        }).on("fileuploaded", function (event, data) {//上传成功之后的一些处理
+            console.log(data)
+
         });
 
 
