--- a/AutoCmdb/templates/asset_repair/add.html
+++ b/AutoCmdb/templates/asset_repair/add.html
@@ -58,6 +58,13 @@
                     {{ forms_obj.summary }}
                 </div>
 
+{#                <div class="col-lg-12 form-group has-feedback">#}
+{#                    {{ forms_obj.photo.label_tag }}#}
+{#                    {{ forms_obj.photo }}#}
+{#                </div>#}
+
+
+
             </div>
 
             <div class="row">
@@ -65,8 +72,7 @@
 
                     <label for="id_summary">上傳圖片:</label>
 
-                    <input id="input-id" type="file" name="photo" class="file" multiple=true
-                           data-preview-file-type="any">
+                    <input id="input-id" type="file" class="file" name="img" multiple=true data-preview-file-type="any">
 
                 </div>
             </div>
@@ -75,13 +81,6 @@
             <div class="row" style="padding: 15px">
 
                 <div class="col-lg-12 form-group">
-                    <form>
-                        <div class="form-group">
-                            <label for="exampleFormControlFile1">Example file input</label>
-                            <input type="file" name="sfile" class="form-control-file" id="exampleFormControlFile1">
-                        </div>
-                    </form>
-
                     <button id="submit" type="submit" class="btn btn-success center-block">提交表單</button>
                 </div>
 
@@ -151,12 +150,18 @@
 
 
         }).on("fileuploaded", function (event, data) {//上传成功之后的一些处理
-            console.log(data)
+            console.log(data);
+
+            console.log(data.response);
+
+            $('#form').append('<input  name="photo" value=' + data.response.id + '>')
 
         });
 
 
         $(document).ready(function () {
+
+            window.photo = [];
 
             // bind button
             $("#submit").on("click", function (e) {
@@ -169,7 +174,7 @@
 
                 console.log('form');
                 var postData = $(this).serializeArray();
-                console.log(postData);
+
             });
 
 
