--- a/AutoCmdb/templates/asset_repair/index.html
+++ b/AutoCmdb/templates/asset_repair/index.html
@@ -85,17 +85,21 @@
                     <td>
                         {{ asset_repair.status }}
                     </td>
+
                     <td>
-                        {{ asset_repair.create_date }}
+                        {{ asset_repair.create_date|date:'Y/m/d h:s' }}
                     </td>
+
                     <td>
-                        {{ asset_repair.finish_date }}
+                        {{ asset_repair.finish_date|default:"" }}
                     </td>
+
                     <td>
-                        {{ asset_repair.repairer }}
+                        {{ asset_repair.repairer|default:"" }}
                     </td>
+
                     <td>
-                        <i class="fa fa-eye"></i>
+                        <a href="{% url 'asset_repair_detail' asset_repair.id %}"><i class="fa fa-eye"></i></a>
                     </td>
 
 
@@ -105,19 +109,8 @@
         </table>
 
     </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">維修記錄表</h1>
-        </div>
-        <!-- /.col-lg-12 -->
-    </div>
-
-    <div class="row">
-
-        {{ asset_repair_obj }}
 
 
-    </div>
 
 
 
