--- a/AutoCmdb/templates/host/host_info.html
+++ b/AutoCmdb/templates/host/host_info.html
@@ -268,6 +268,7 @@
                                          src="http://2.bp.blogspot.com/-U77ROceRfZ4/VBZUKz_wccI/AAAAAAAAAL8/CHcrtv2dIcQ/s1600/187785.jpeg">
                                 </a>
                                 <div class="media-body" style="margin-bottom: 20px;height: 150px">
+
                                     <h3 class="media-heading">
                                         {{ asset_repair.title }}
 
@@ -441,7 +442,7 @@
 
             $.ajax({
 
-                url: "{% url 'asset_repair_detail' %}",
+                url: "{% url 'asset_repair_detail_add' %}",
                 data: data,
                 type: 'POST',
                 async: false,
