--- a/AutoCmdb/templates/asset_repair/detail.html
+++ b/AutoCmdb/templates/asset_repair/detail.html
@@ -1,4 +1,4 @@
-{% extends 'asset/base.html' %}
+{% extends 'asset_repair/base.html' %}
 {% load asset_tags %}
 
 
@@ -16,150 +16,179 @@
 
 
     <ol class="breadcrumb">
-        <li><a href="{% url 'asset_repair' %}">資產維修表 </a></li>
-        <li class="active">{{ host_obj.name }}</li>
+        <li>
+            <a href="{% url 'asset_repair' %}">資產維修表</a>
+        </li>
+        <li class="active">{{ asset_repair_obj.asset_obj.name }} {{ asset_repair_obj.title }}</li>
 
     </ol>
 
 
 
-    <div class="" style="padding: 20px">
+    <div class="">
 
 
+        <!-- /維修紀錄 Tab -->
+        <div class="tab-pane" id="tab_repair">
 
 
-            <!-- /維修紀錄 Tab -->
-            <div class="tab-pane" id="tab_repair">
+            <div class="well">
+                <div class="media">
+
+                    <div id="post">
+
+                        <div class="media-body" style="margin-bottom: 20px;height: 150px">
+                            <h3 class="media-heading">
+                                {{ asset_repair_obj.asset_obj.name }} {{ asset_repair_obj.title }}
+
+                                {% if asset_repair_obj.status %}
+                                    <span class="badge alert-success">已處理</span>
+                                {% else %}
+
+                                    <span class="badge alert-danger">跟進中</span>
+                                {% endif %}
 
 
+                            </h3>
 
-                    <div class="well">
-                        <div class="media">
-
-                            <div id="post">
-                                <a class="pull-left" href="#" style="margin-right: 20px">
-                                    <img class="media-object" height="150" width="150"
-                                         src="http://2.bp.blogspot.com/-U77ROceRfZ4/VBZUKz_wccI/AAAAAAAAAL8/CHcrtv2dIcQ/s1600/187785.jpeg">
-                                </a>
-                                <div class="media-body" style="margin-bottom: 20px;height: 150px">
-                                    <h3 class="media-heading">
-                                        {{ asset_repair_obj.title }}
-
-                                        {% if asset_repair_obj.status %}
-                                            <span class="badge alert-success">已處理</span>
-                                        {% else %}
-
-                                            <span class="badge alert-danger">跟進中</span>
-                                        {% endif %}
+                            <p class="text-left">
+                                <span>
+                                    <i style="color: black" class="far fa-user"></i> {{ asset_repair_obj.creator.code }}
+                                </span>
+                            </p>
 
 
-                                    </h3>
-                                    <p class="text-left"><span><i
-                                            style="color: black"
-                                            class="far fa-user"></i> {{ asset_repair_obj.creator.code }}</span></p>
-                                    <p>{{ asset_repair_obj.summary }}</p>
+                            <p style="height: 60px">{{ asset_repair_obj.summary }}</p>
 
 
-                                    <ul class="list-inline list-unstyled">
+                            <ul class="list-inline">
 
-                                        <li>
-                                            <span><i class="glyphicon glyphicon-calendar"></i> {{ asset_repair_obj.create_date |date:"Y/m/d" }} </span>
-                                        </li>
+                                <li>
+                                    <span>
+                                        <i class="glyphicon glyphicon-calendar"></i> {{ asset_repair_obj.create_date |date:"Y/m/d" }}
+                                    </span>
+                                </li>
 
-                                        <li>|</li>
+                                <li>|</li>
 
-                                        <li><span><i class="glyphicon glyphicon-wrench"></i>
-                                        <!--- TODO 只篩選資訊部 User Code -->
-                                            {% for re in asset_repair_detail %}
-                                                {{ re.user.code }}
-                                            {% endfor %}
+                                <li><span><i class="glyphicon glyphicon-wrench"></i>
+                                    <!--- TODO 只篩選資訊部 User Code -->
+                                    {% for re in asset_repair_detail %}
+                                        {{ re.user.code }}
+                                    {% endfor %}
                                     </span></li>
 
-                                        <li>|</li>
-                                        <span onclick="show_reply($(this))"><i
-                                                class="glyphicon glyphicon-comment "></i> {{ asset_repair_detail|length }} comments</span>
+                                <li>|</li>
 
-                                    </ul>
+                                <span>
+                                    <i class="glyphicon glyphicon-comment "></i> {{ asset_repair_detail|length }} 留言
+                                </span>
+
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
 
 
+                <!-- 更多圖片 -->
+                {% if asset_repair_obj.photo.all %}
+
+
+                    <hr>
+
+                    <div>
+                        <p>更多圖片</p>
+                        <div class="row">
+
+
+                            {% for i in asset_repair_obj.photo.all %}
+
+                                <div class="col-md-4">
+                                    <div class="thumbnail">
+                                        <a href="{{ i.photo.url }}" target="_blank">
+                                            <img src="{{ i.photo.url }}" alt="Lights">
+                                        </a>
+                                    </div>
                                 </div>
-                            </div>
-
-                            <div id="reply" class="hide">
-                                {% for ass_re in asset_repair_detail %}
-                                    <div class="panel panel-primary">
-                                        <div class="panel-heading">
-                                            <strong><i class="far fa-user"></i> {{ ass_re.user.code }}</strong>
-                                        </div>
-                                        <div class="panel-body">
-                                            {{ ass_re.content }}
-                                            <p class="text-right">{{ ass_re.create_date|date:'Y/m/d H:i' }}</p>
-                                        </div><!-- /panel-body -->
-                                    </div><!-- /panel panel-default -->
-
-                                {% endfor %}
 
 
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
 
 
+            <!--- 留言  -->
+            <div id="reply">
+                {% for ass_re in asset_repair_detail %}
+                    <div class="panel panel-primary" data-id="{{ ass_re.id }}" data-repair="{{ ass_re.user.id }}">
+                        <div class="panel-heading">
 
-                                {% if not asset_repair_obj.status %}
-                                    <div class="panel " style="border-color:black">
-                                        <div class="panel-heading">
-                                            <strong>添加一條新回覆</strong>
-                                        </div>
-                                        <div class="panel-body" id="reply_post">
+                            <strong><i class="far fa-user"></i> {{ ass_re.user.code }}</strong>
+
+                            <!-- 如果是自己的回覆 可以編輯/刪除-->
+                            {% if ass_re.user.code == request.user.userprofile.code %}
+                                <button class="pull-right commit_del" style="background: transparent;border: none"
+                                        onclick="commit_del(this)">
+                                    <i class="fa fa-trash fa-fw"></i>刪除
+                                </button>
+
+
+                                <button class="pull-right commit_edit" style="background: transparent;border: none"
+                                        onclick="commit_edit(this)">
+                                    <i class="fa fa-edit fa-fw"></i>編輯
+                                </button>
+
+                                <button class="pull-right commit_submit" style="background: transparent;border: none"
+                                        onclick="commit_submit(this)">
+                                    修改
+                                </button>
+
+                            {% endif %}
+
+
+                        </div>
+                        <div class="panel-body">
+                            <span>{{ ass_re.content }}</span>
+                            <textarea style="display: none" class="form-control"></textarea>
+
+                            <p class="text-right">{{ ass_re.create_date|date:'Y/m/d H:i' }}</p>
+                        </div><!-- /panel-body -->
+                    </div><!-- /panel panel-default -->
+
+                {% endfor %}
+            </div>
+
+            <!-- 回覆 -->
+            {% if not asset_repair_obj.status %}
+                <div class="panel " style="border-color:black">
+                    <div class="panel-heading">
+                        <strong>添加一條新回覆</strong>
+                    </div>
+                    <div class="panel-body" id="reply_post">
 
                                     <textarea class="form-control" name="content" maxlength="10000"
                                               style="overflow: hidden; overflow-wrap: break-word; resize: none; height: 100px"></textarea>
 
-                                            <input name="userid" value="{{ request.user.userprofile.id }}"
-                                                   style="display: none">
-                                            <input name="repairid" value="{{ asset_repair.id }}"
-                                                   style="display: none">
-                                            <button id='reply_btn' class="btn" style="margin-top: 15px"
-                                                    onclick="reply()">回覆
-                                            </button>
-                                        </div><!-- /panel-body -->
-                                    </div>
-                                {% endif %}
-                            </div>
+                        <input name="userid" value="{{ request.user.userprofile.id }}"
+                               style="display: none">
+                        <input name="repairid" value="{{ asset_repair_obj.id }}"
+                               style="display: none">
+                        <button id='reply_btn' class="btn" style="margin-top: 15px"
+                                onclick="reply()">回覆
+                        </button>
+                    </div><!-- /panel-body -->
+                </div>
+            {% endif %}
 
-                        </div>
+        </div>
 
-                    </div>
-
-
-
-            </div>
-
-
-    <div>
-
-
-        {% for i in asset_repair_obj.photo.all %}
-
-
-            {{ i }}
-
-        {% endfor %}
-
-
-
+        {% csrf_token %}
     </div>
 
 
-
-            <div>
-                {% for i in asset_repair_detail %}
-
-                    {{ i.url }}
-
-                {% endfor %}
-
-            </div>
-
-        </div>
 
 
 {% endblock %}
@@ -242,9 +271,85 @@
 
         }
 
-        function show_reply(ele) {
-            {#console.log($(this));#}
-            $('#reply').toggleClass('hide');
+        // 編輯
+        function commit_edit(ele) {
+
+            console.log("edit");
+            //console.log(ele);
+            {#console.log($(ele).data('id'));#}
+            var primary = $(ele).closest(".panel-primary");
+
+            var id = primary.data('id');
+            console.log(id);
+
+
+            var span = primary.find('span');
+            span.hide();
+
+            var textarea = primary.find('textarea');
+            textarea.val(span.text());
+            textarea.show();
+
+            primary.find('button').hide();
+            primary.find('.commit_submit').show();
+
+
+        }
+
+        // 修改
+        function commit_submit(ele) {
+
+            console.log('commit_submit');
+
+            var primary = $(ele).closest(".panel-primary");
+
+            var id = primary.data('id');
+            console.log(id);
+
+            var repair = primary.data('repair');
+            console.log(repair);
+
+
+            var content = primary.find('textarea');
+
+            console.log(content.val());
+
+            data = {
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                id: id,
+                content: content.val(),
+                user: $("#reply_post [name='userid']").val(),
+                repair : repair
+
+
+            };
+
+            $.ajax({
+
+                url: "{% url 'asset_repair_detail_edit' %}",
+                data: data,
+                type: 'PUT',
+                async: false,
+                success: function (callback) {
+                    console.log(callback);
+
+
+                },
+                error: function () {
+
+
+                }
+
+            });
+
+
+        }
+
+        // 刪除
+        function commit_del(ele) {
+
+            console.log("del");
+            console.log($(ele).data('id'));
 
         }
 
