--- a/AutoCmdb/templates/asset_repair/index.html
+++ b/AutoCmdb/templates/asset_repair/index.html
@@ -18,6 +18,7 @@
 
 {% block content %}
 
+
     <ol class="breadcrumb">
         <li><a href="#">維修記錄表</a></li>
 
@@ -103,7 +104,7 @@
                     </td>
 
                     <td>
-                        <a href="{% url 'asset_repair_detail' asset_repair.id %}"><i class="fa fa-eye"></i></a>
+                        <a href="{% url 'asset_repair_detail' asset_repair.id %}">詳細</a>
                     </td>
 
 
