--- a/AutoCmdb/templates/asset_repair/index.html
+++ b/AutoCmdb/templates/asset_repair/index.html
@@ -96,7 +96,7 @@
                     </td>
 
                     <td>
-                        {{ asset_repair.finish_date|default:"" }}
+                        {{ asset_repair.finish_date|date:'Y/m/d H:i' }}
                     </td>
 
                     <td>
