--- a/AutoCmdb/templates/asset/base.html
+++ b/AutoCmdb/templates/asset/base.html
@@ -2,12 +2,38 @@
 {% load asset_tags %}
 
 
+
+
+
+
 {% block title %}
     CDMB
 {% endblock %}
 
 
+{% block navbar_left %}
+
+    <!-- 驗證用戶部門(admin)  -->
+    {% verify_permissions request as admin_dent %}
+
+    {% verify_dent request 'IT' as ITdent %}
+
+    {% if admin_dent or ITdent %}
+
+        <li class="active"><a href="{% url 'asset' %}">資產</a></li>
+        <li><a href="{% url 'host' %}">運維</a></li>
+
+    {% else %}
+
+        <li class="active"><a href="{% url 'asset' %}">資產</a></li>
+
+    {% endif %}
+
+{% endblock %}
+
+
 {% block sideber_menu %}
+
 
     {% url 'asset' as asset %}
     {% url 'asset_index' as asset_index %}
@@ -26,7 +52,6 @@
 
     {% url 'department' as department %}
     {% url 'department_input' as department_input %}
-
 
 
 
@@ -59,6 +84,13 @@
                     <ul class="list-unstyled collapse" id="assetSubmenu" style="">
                         <li {% if request.path == asset_index %}
                             class="active"{% endif %}><a href={{ asset_index }}>資產列表</a></li>
+
+
+                        <li {% if request.path == asset_repair %}class="active"{% endif %}><a
+                                href="{{ asset_repair }}">資產維修紀錄表</a>
+                        </li>
+
+
                         <li {% if request.path == asset_input %}class="active"{% endif %}><a
                                 href="{{ asset_input }}">匯入</a>
                         </li>
@@ -132,8 +164,14 @@
 
             <ul class="list-group">
 
-                <li class="list-group-item"><i class="fa fa-home {% if request.path == asset %}active{% endif %}"></i><a
-                        href={{ asset }}>資產首頁</a></li>
+
+                <a href="{{ asset }}"
+                   class="list-group-item {% if request.path == asset %}active{% endif %}">
+                <span>
+                    <i class="fa fa-box"></i> 資產首頁
+                </span>
+                </a>
+
 
                 <a href="{{ asset_index }}"
                    class="list-group-item {% if request.path == asset_index %}active{% endif %}">
@@ -165,15 +203,6 @@
 
 
 
-
-
-    <!--- 運維管理 -->
-    <ul class="nav nav-sidebar">
-
-        <li {% if request.path == host %}class="active"{% endif %}><a href={{ host }}>運維管理</a></li>
-
-
-    </ul>
 
 
 
